Update the AnalysisReport to match Mule